# kindtech

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  DEVELOPERS.md  README.md  mkdocs.yml  pyproject.toml  sitemap.xml
.ast-grep/rules/: no-bare-except.yml  no-print-statements.yml  no-requests-without-timeout.yml
.cursor/rules/: uv.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude.yml  docs-preview.yml  docs.yml
api/data-sources/: index.html
api/geo/: index.html
api/ons/: index.html
api/postcodes/: index.html
blog/api-discovery/: index.md
blog/introduction/: index.html
case-studies/: index.html
case-studies/cal-vulnerable-client/: index.html
case-studies/material-focus-recycling/: index.html
case-studies/smart-works-woman-unemployment/: index.html
case-studies/sobus-bame-analysis/: index.html
case-studies/starlight-children-mapping/: index.html
docs/: index.md
docs/api/: data-sources.md  geo.md  imd.md  index.md  ons.md  postcodes.md
docs/blog/: api-discovery.md  index.md  introduction.md
docs/case-studies/: cal-vulnerable-client.md  index.md  material-focus-recycling.md  smart-works-woman-unemployment.md  sobus-bame-analysis.md  starlight-children-mapping.md
examples/: cal_vulnerable_client.py  download_nomis_table.py  geo_boundaries.py  geo_plus_ons.py  get_nomis_tables.py  index.html  material_focus_recycling.py  ons_statistics.py  smart_works_unemployment.py  sobus_bame_referrals.py  starlight_play_provision.py
pr-preview/pr-23/: index.html  sitemap.xml
pr-preview/pr-23/api/: index.html
pr-preview/pr-23/blog/: index.html
pr-preview/pr-23/search/: search_index.json
pr-preview/pr-24/api/: index.html
pr-preview/pr-24/search/: search_index.json
pr-preview/pr-26/: index.html
pr-preview/pr-26/api/: index.html
pr-preview/pr-26/search/: search_index.json
pr-preview/pr-27/blog/: index.html
pr-preview/pr-27/search/: search_index.json
pr-preview/pr-30/: llms-full.txt  llms.txt
pr-preview/pr-30/blog/: index.html
pr-preview/pr-30/search/: search_index.json
pr-preview/pr-30/stylesheets/: extra.css
pr-preview/pr-31/: index.html
pr-preview/pr-31/api/: index.html
pr-preview/pr-31/blog/: index.html
pr-preview/pr-32/case-studies/: index.html
pr-preview/pr-33/: 404.html  index.html  index.md  llms-full.txt
search/: search_index.json
src/kindtech/: __init__.py  _frames.py  _mapping.py  geo.py  nomis.py  ons.py
tests/: test_geo_api.py  test_geo_enums.py  test_geo_ingestion.py  test_imd_api.py  test_mapping.py  test_nomis.py  test_nomis_integration.py  test_ons_api.py  test_ons_ingestion.py  test_postcodes_api.py
(+54 files in other folders)
