[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kindtech"
version = "0.1.0"
description = "All things kindtech repository - kindtech monorepo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
    "mkdocs-material>=9.6.14",
    "beautifulsoup4>=4.13.4",
    "pytest>=8.4.1",
    "polars>=1.31.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ERA", "TID252"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
