[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kindtech"
version = "0.1.0"
description = "All things kindtech repository - kindtech monorepo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "narwhals>=2.18.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pandas>=2.0.0",
    "prek>=0.3.5",
    "pytest>=8.0",
    "ruff>=0.12.0",
    "ty>=0.0.21",
]
ingestion = [
    "beautifulsoup4>=4.12",
    "pandas>=2.0.0",
    "polars>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ERA"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
